Sandy Store spacing fix

--- a/style.css
+++ b/style.css
@@ -1909,6 +1909,11 @@ abbr[title] {
 @media all and (max-width:64em) { /* 1024 */
 
 }
+@media only screen and (max-width:56.25em) {
+	h2 {
+		font-size:22px;
+	}
+}
 
 @media all and (max-width:54em) { /* 864 */
 	.menu-wrap nav {
@@ -1926,12 +1931,20 @@ abbr[title] {
 	.span-2,.span-1 {
 		width: 100%;
 	}
-	.ways-to-give {
-		padding-top: 20px;
+	.featured-img {
+		width:65.5%;
 	}
-	.to-give p {
-		width: 100%;
-		margin:20px 0 0 0;
+	.ways-to-give {
+		padding-top: 0;
+		width:31%;
+	}
+	.ways-to-give img {
+		height:auto;
+		width:25%;
+	}
+	.ways-to-give p {
+		font-size:12px;
+		line-height:1.2;
 	}
 	.tumblr-feed, .ticker {
 		width: 50%;
@@ -1945,6 +1958,11 @@ abbr[title] {
 @media all and (max-width: 655px) {
 	html {
 		font-size: 0.9em
+	}
+	.span-1, .span-2 {
+		width:100%;
+		margin-right: 0;
+		margin-left: 0;
 	}
 
 	/* -----------------------
@@ -2073,6 +2091,20 @@ abbr[title] {
 	
 	.ways-to-give {
 		background:#000;
+	}
+	.ways-to-give h2 {
+		font-size:19px;
+	}
+	.ways-to-give {
+		padding-top: 20px;
+	}
+	.ways-to-give img {
+		height:auto;
+		width:auto;
+	}
+	.ways-to-give p {
+		font-size:15px;
+		line-height:1.5;
 	}
 
 	/* -----------------------
@@ -2222,6 +2254,12 @@ abbr[title] {
 	.artists-tweets .jta-tweet-list-item {
 		margin-bottom: 0;
 	}
+	
+	/* -----------------------
+	-- Support The Cause -- */
+	
+	
+	
 	/* -----------------------
 	-- RH Stories -- */
 
@@ -2262,7 +2300,7 @@ abbr[title] {
 	}
 
 	h2 {
-		font-size: 18px;
+		font-size: 16px;
 	}
         #donate-popup .amounts input[type=radio]{
             margin-right: 5px;
@@ -2300,10 +2338,11 @@ abbr[title] {
             margin-top: -40px;
         }
         .sandy-store p{
-            margin-bottom: 0.1em;
+            margin: 1em auto .1em;
+			max-width: 200px;
         }
         .sandy-store .one-third{
-            margin: 30px 0 60px;
+            margin: 20px 0;
         }
         .twitter-wrap{
             overflow: visible;
